// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseMessage should render correctly 1`] = `
"<div class=\\"message-container\\"><div class=\\"message  visible \\"><div class=\\"icon\\"><svg fill=\\"none\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><path d=\\"M18 8A6 6 0 006 8c0 7-3 9-3 9h18s-3-2-3-9M13.73 21a2 2 0 01-3.46 0\\"></path></svg></div><div class=\\"text\\">test-value</div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #fff;
            color: #282d30;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><style>
        .message-container {
          position: fixed;
          min-height: 10px;
          top: 20px;
          left: 0;
          right: 0;
          z-index: 2000;
          box-sizing: border-box;
          overflow: visible;
          display: flex;
          flex-direction: column;
          align-items: center;
          height: 0;
          visibility: visible;
        }
      </style></div>"
`;

exports[`UseMessage should render no shadow correctly 1`] = `
"<div class=\\"message-container\\"><div class=\\"message  visible \\"><div class=\\"icon\\"><svg stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><path fill=\\"currentColor\\" stroke=\\"currentColor\\" d=\\"M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z\\"></path><path fill=\\"none\\" stroke=\\"var(--zeit-icons-background)\\" d=\\"M8 11.857l2.5 2.5L15.857 9\\"></path></svg></div><div class=\\"text\\">no-shadow</div><div class=\\"close\\"><svg fill=\\"none\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><path d=\\"M18 6L6 18M6 6l12 12\\"></path></svg></div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #effaef;
            color: #7cd77b;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: none;
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><style>
        .message-container {
          position: fixed;
          min-height: 10px;
          top: 20px;
          left: 0;
          right: 0;
          z-index: 2000;
          box-sizing: border-box;
          overflow: visible;
          display: flex;
          flex-direction: column;
          align-items: center;
          height: 0;
          visibility: visible;
        }
      </style></div>"
`;

exports[`UseMessage should render with custom icon correctly 1`] = `
"<div class=\\"message-container\\"><div class=\\"message  visible \\"><div class=\\"icon\\"><svg fill=\\"none\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: red;\\"><path d=\\"M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22\\"></path></svg></div><div class=\\"text\\">custom icon</div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #fff;
            color: #282d30;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><style>
        .message-container {
          position: fixed;
          min-height: 10px;
          top: 20px;
          left: 0;
          right: 0;
          z-index: 2000;
          box-sizing: border-box;
          overflow: visible;
          display: flex;
          flex-direction: column;
          align-items: center;
          height: 0;
          visibility: visible;
        }
      </style></div>"
`;

exports[`UseMessage should work with different colors 1`] = `
"<div class=\\"message-container\\"><div class=\\"message  visible \\"><div class=\\"icon\\"><svg stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" fill=\\"currentColor\\"></circle><path stroke=\\"var(--zeit-icons-background)\\" d=\\"M12 16v-4M12 8h.01\\"></path></svg></div><div class=\\"text\\">primary</div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #f0f5ff;
            color: #0054fe;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><div class=\\"message  visible \\"><div class=\\"icon\\"><svg stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><path fill=\\"currentColor\\" stroke=\\"currentColor\\" d=\\"M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z\\"></path><path fill=\\"none\\" stroke=\\"var(--zeit-icons-background)\\" d=\\"M8 11.857l2.5 2.5L15.857 9\\"></path></svg></div><div class=\\"text\\">success</div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #effaef;
            color: #7cd77b;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><div class=\\"message  visible \\"><div class=\\"icon\\"><svg stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" fill=\\"currentColor\\"></circle><path stroke=\\"var(--zeit-icons-background)\\" d=\\"M12 8v4M12 16h.01\\"></path></svg></div><div class=\\"text\\">warning</div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #fef1ea;
            color: #ffc438;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><div class=\\"message  visible \\"><div class=\\"icon\\"><svg stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"1.5\\" shape-rendering=\\"geometricPrecision\\" viewBox=\\"0 0 24 24\\" height=\\"24\\" width=\\"24\\" style=\\"color: currentColor;\\"><circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\" fill=\\"currentColor\\"></circle><path stroke=\\"var(--zeit-icons-background)\\" d=\\"M15 9l-6 6M9 9l6 6\\"></path></svg></div><div class=\\"text\\">error</div><style>
          .message {
            max-width: 71.4286rem;
            background-color: #fbebeb;
            color: #e15c56;
            border: 0;
            border-radius: 4px;
            padding: 1.1429rem;
            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
            margin-top: calc(1.1429rem * 1.5);
            transform: translate(0, -100%);
            opacity: 0;
            transition: transform 150ms, opacity 150ms,
              margin-top 150ms;
            display: flex;
          }
          .message:first-child {
            margin-top: 0;
          }
          .message.visible {
            transform: translate(0, 0);
            opacity: 1;
            z-index: 2;
          }
          .message.hide {
            margin-top: -3.5714rem;
            opacity: 0;
            z-index: 1;
          }
          .icon {
            height: 1.1429rem;
            width: 1.1429rem;
            margin-right: calc(1.1429rem * 0.5);
            flex-grow: 1;
            flex-shrink: 0;
          }
          .icon > :global(svg) {
            width: 100%;
            height: 100%;
          }
          .text {
            font-style: normal;
            font-weight: 500;
            font-size: 1rem;
            line-height: 1.2857rem;
          }
          .close {
            height: 1.1429rem;
            width: 1.1429rem;
            cursor: pointer;
            margin-left: 1.1429rem;
            color: #dbdde0;
            flex-grow: 1;
            flex-shrink: 0;
          }
          .close > :global(svg) {
            width: 100%;
            height: 100%;
          }
        </style></div><style>
        .message-container {
          position: fixed;
          min-height: 10px;
          top: 20px;
          left: 0;
          right: 0;
          z-index: 2000;
          box-sizing: border-box;
          overflow: visible;
          display: flex;
          flex-direction: column;
          align-items: center;
          height: 0;
          visibility: visible;
        }
      </style></div>"
`;
